# EVChargeInsights

./: .replit  analysis_data.json  analysis_engine.py  app.py  data_collector.py  ev_charging_analysis_report.html  ev_charging_analysis_report.md  main.py  project-requirements.txt  pyproject.toml  render.yaml  replit.md  report_generator.py  utils.py  web_server.py
static/: styles.css
templates/: report_template.html
